search, filter by key and sortBy added

--- a/templates/addProduct.html
+++ b/templates/addProduct.html
@@ -9,7 +9,7 @@
         placeholder="Enter the Product Id"
       />
       <small id="id-error" class="form-text text-danger d-none"
-        >Please enter the 5-20 characters id.</small
+        >Please enter the 5-20 numbers id.</small
       >
     </div>
     <div class="mb-3">
