--- a/templates/products.html
+++ b/templates/products.html
@@ -94,3 +94,40 @@
     </div>
   </div>
 </div>
+<div
+  class="controls d-flex flex-column flex-md-row w-100 justify-content-center gap-2"
+>
+  <div class="d-flex m-2">
+    <label class="m-2 text-nowrap">Search :</label>
+    <input
+      type="email"
+      class="form-control"
+      aria-describedby="emailHelp"
+      placeholder="Enter the id to filter the product"
+      id="search-field"
+    />
+  </div>
+  <div class="d-flex gap-1 justify-content-center align-content-center p-2">
+    <label class="m-2 text-nowrap">Filter :</label>
+    <select
+      class="form-select"
+      aria-label="Default select example"
+      id="filter-select"
+    >
+      <option selected value="id">Id</option>
+      <option value="price">Price</option>
+      <option value="name">Name</option>
+    </select>
+  </div>
+  <div class="d-flex gap-1 justify-content-center align-content-center p-2">
+    <label class="m-2 text-nowrap">Sort By:</label>
+    <select
+      class="form-select select-picker"
+      aria-label="Default select example"
+      id="sortBy-select"
+    >
+      <option selected value="asc">asc</option>
+      <option value="des">des</option>
+    </select>
+  </div>
+</div>
