--- a/templates/products.html
+++ b/templates/products.html
@@ -95,7 +95,7 @@
   </div>
 </div>
 <div
-  class="controls d-flex flex-column flex-md-row w-100 justify-content-center gap-2"
+  class="controls d-flex flex-column flex-md-row w-100 justify-content-center gap-2 mt-3"
 >
   <div class="d-flex m-2">
     <label class="m-2 text-nowrap">Search :</label>
